# ratebar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: ci.md  mockups.html
docs/superpowers/plans/: 2026-06-11-ratebar-popover-ui.md  2026-06-11-ratebar.md
docs/superpowers/specs/: 2026-06-11-ratebar-design.md  2026-06-11-ratebar-popover-ui-design.md
packaging/: build_dmg.sh  launcher.py  make_icon.py  make_icon.sh  ratebar.icns  ratebar.spec
src/ratebar/: __init__.py  app.py  fetcher_live.py  fetcher_logs.py  gauge.py  render.py  timeutil.py  types.py  usage.py
src/ratebar/ui/: bar_view.py  popover.py
tests/: test_fetcher_live.py  test_fetcher_logs.py  test_gauge.py  test_render.py  test_timeutil.py  test_usage.py
tests/fixtures/: sample.jsonl
