[project]
name = "ratebar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Biplav Subedi", email = "64011098+biplav00@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34.2",
    "rumps>=0.4.0",
]

[project.scripts]
ratebar = "ratebar.app:run"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
